Cambio titulo y otros

--- a/salesorder/webapp/i18n/i18n.properties
+++ b/salesorder/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Orden de Venta
+appTitle=Orden de Venta de Juguetes
 
 #YDES: Application description
 appDescription=A Fiori application.
